--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -30,3 +30,8 @@
 #error_explanation ul li {
   font-size: 12px;
   list-style: square; }
+
+  .popover{
+    color: rgb(132, 46, 176);
+    font-family: futura;
+  }
