--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -34,5 +34,33 @@
   .popover{
     color: rgb(132, 46, 176);
     font-family: futura;
-    z-index: -1000;
+    z-index: 1000;
+    opacity: 1;
+  }
+
+  select {
+    -webkit-writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    color: #ed4f61;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: start;
+    -webkit-appearance: menulist;
+    box-sizing: border-box;
+    align-items: center;
+    white-space: pre;
+    outline: 0;
+    border-width: 0 0 1px;
+    background-color: rgb(248, 248, 248);
+    cursor: default;
+    margin: 0em;
+    border-radius: 5px;
+    border-style: solid;
+    border-color:#ff9d25;
   }
