--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
           <%= f.label :Nome, class: 'texto-label' %>
         </div>
         <div class="col">
-          <%= f.text_field :name, id: 'user_name' ,autofocus: true, :style => "text-transform: capitalize;", :class => "borda-caixa-texto caixa-de-texto", :maxlength=> "20", :autocomplete => "off", required: true %>
+          <%= f.text_field :name , :pattern => '[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$', id: 'user_name' ,autofocus: true, :style => "text-transform: capitalize;", :class => "borda-caixa-texto caixa-de-texto", :maxlength=> "20", :autocomplete => "off", required: true %>
         </div>
       </div>
 
@@ -29,8 +29,8 @@
         <div class="col-4" align="right">
           <%= f.label :Sobrenome, class: 'texto-label' %>
         </div>
-        <div class="col" align="left" id="user_fullname">
-          <%= f.text_field :last_name, autofocus: true, :class => "borda-caixa-texto caixa-de-texto", :maxlength=> "50", :autocomplete => "off", required: true %>
+        <div class="col" align="left">
+          <%= f.text_field :last_name, id: 'user_last_name', autofocus: true, :class => "borda-caixa-texto caixa-de-texto", :maxlength=> "50", :autocomplete => "off", required: true %>
         </div>
       </div>
 
@@ -39,7 +39,7 @@
           <%= f.label :Idade, class: 'texto-label' %>
         </div>
         <div class="col">
-        <%= f.text_field :idadee, id: 'idade', autofocus: true, :class => "borda-caixa-texto caixa-de-texto", :placeholder => "00/00/0000" , :autocomplete => "off", required: true, :maxlength=> "3" %>
+        <%= f.text_field :idadee, id: 'idade', :pattern =>"[0-9]+$", autofocus: true, :class => "borda-caixa-texto caixa-de-texto", :autocomplete => "off", required: true, :maxlength=> "3" %>
         </div>
       </div>
 
@@ -214,9 +214,7 @@
     </div>
     <div style="width: 100%; height: 50px;">
     </div>
-    <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Tooltip em elemento desativado">
-      <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>Botão desativado</button>
-    </span>
+
   </section>
 <% end %>
 
@@ -228,30 +226,30 @@
 
   // Regex formatação senha.
   var password = new RegExp('(?=^.{8,}$)(?=.*[0-9])(?=.*[A-Z])(?=.*[a-z])(?=.*[^A-Za-z0-9]).*');
-
   // Regex formatação email.
   var email = new RegExp('^[a-z0-9](\.?[a-z0-9])+@');
 
     $(document).ready(function () {
       $(this).scrollTop(0);
 
-      $("#idade").keyup(function(){
-        if ($(this).val().length == 0){
-          $(this).css("border-color", "#ff8d02");
-        }
-        else if ($('#idade') > 10){
-          $(this).css("border-color", "green");
-        }
-        else if($('#idade') < 100){
-          $(this).css("border-color", "green");
-        }
-        else {
-          $(this).css("border-color", "red");
-        }
-      });
+      // $("#idade").keyup(function(){
+      //   if ($(this).val().length == 0){
+      //     $(this).css("border-color", "#ff8d02");
+      //   }
+      //   else {
+      //     if($(this) > "10"){
+      //     $(this).css("border-color", "green");
+      //   }
+      //   else if ($(this) < "100"){
+      //     $(this).css("border-color", "green");
+      //   }
+      //   else {
+      //     $(this).css("border-color", "red");
+      //   }
+      //   }
+      // });
 
-      $('#data_nasc').mask('00/00/0000');
-
+// -------------------------------------------------------------------
       $("#user_email").keyup(function () {
       // Atribuindo o valor do email a uma variável.
       var VAL = this.value;
@@ -297,7 +295,7 @@
         $('#exist-email').popover('hide')
       }
     });
-
+// ----------------------------------------------------------------------
       $("#user_cep").keyup(function () {
         if ($(this).val().length == 9) {
           $.ajax({
@@ -340,28 +338,32 @@
         }
       });
       $('#user_cep').mask('00000-000');
-
+// ------------------------------------------------------------------
 
       $("#user_name").keyup(function () {
         if ($(this).val().length > 0){
-          $("#user_name").css("border-color", "green");
-        }
+          $(this).css("border-color", "green");
+        
+      }
         // Se este campo não for preenchido.
         else {
-          $("#user_name").css("border-color", "#ff8d02");
+          $(this).css("border-color", "#ff8d02");
        }
       })
 
+// ---------------------------------------------------------------------------------
       $("#user_last_name").keyup(function () {
+
         if ($(this).val().length > 0){
           $("#user_last_name").css("border-color", "green");
+          // Se o campo senha estiver com a formatação correta.
         }
         // Se este campo não for preenchido.
         else {
           $("#user_last_name").css("border-color", "#ff8d02");
        }
       })
-
+// ------------------------------------------------------------------------------------------
 
       $("#user_password").keyup(function () {
         var VAL = this.value;
@@ -397,6 +399,7 @@
         // Se o campo senha estiver vazio.
         else {
           $(this).css("border-color", "#ff8d02");
+          $('#text-senha').popover('hide');
   
           // Se o camppo confirmação for vazio.
           if ($("#user_password_confirmation").val().length == 0){
@@ -404,7 +407,7 @@
             $('#text-senhaconf').popover('hide');
           }
         }
-  
+
         // Se o campo confirmação de senha tiver algo.
         if ($("#user_password_confirmation").val().length > 0){
   
@@ -421,6 +424,7 @@
           }
         }
       });
+// ---------------------------------------------------------------------------- 
   
       $("#user_password_confirmation").keyup(function() {
   
@@ -442,7 +446,8 @@
   
         // Se não tiver algo no campo confirmação.
         else{
-          $(this).css("#ff8d02");
+          $(this).css("border-color", "#ff8d02");
+          $('#text-senhaconf').popover('hide');
          }
        });
   });
